--- a/TemplateTPCorto/TemplateTPCorto.csproj
+++ b/TemplateTPCorto/TemplateTPCorto.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminAuthorizationForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminAuthorizationForm.Designer.cs">
+      <DependentUpon>AdminAuthorizationForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ChangePassword.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -58,8 +64,20 @@
     <Compile Include="FormLogin.Designer.cs">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModifyPersonForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModifyPersonForm.Designer.cs">
+      <DependentUpon>ModifyPersonForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SupervisorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SupervisorForm.Designer.cs">
+      <DependentUpon>SupervisorForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </EmbeddedResource>
