--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -42,7 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Login\Credencial.cs" />
+    <Compile Include="Perfil.cs" />
+    <Compile Include="PerfilRol.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rol.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
