--- a/Persistencia/Persistencia.csproj
+++ b/Persistencia/Persistencia.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataBase\DataBaseUtils.cs" />
+    <Compile Include="PerfilPersistencia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioPersistencia.cs" />
     <Compile Include="WebService\Utils\WebHelper.cs" />
