punto 4 - falta menu de supervisor y admin :(

--- a/TemplateTPCorto/TemplateTPCorto.csproj
+++ b/TemplateTPCorto/TemplateTPCorto.csproj
@@ -64,6 +64,12 @@
     <Compile Include="FormLogin.Designer.cs">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormPrincipal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPrincipal.Designer.cs">
+      <DependentUpon>FormPrincipal.cs</DependentUpon>
+    </Compile>
     <Compile Include="ModifyPersonForm.cs">
       <SubType>Form</SubType>
     </Compile>
