--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Login\Credencial.cs" />
     <Compile Include="Perfil.cs" />
     <Compile Include="PerfilRol.cs" />
+    <Compile Include="Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rol.cs" />
   </ItemGroup>
