--- a/Persistencia/Persistencia.csproj
+++ b/Persistencia/Persistencia.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="DataBase\DataBaseUtils.cs" />
     <Compile Include="PerfilPersistencia.cs" />
+    <Compile Include="PersonaPersistencia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioPersistencia.cs" />
     <Compile Include="WebService\Utils\WebHelper.cs" />
